Fixed a Bug with scrollbar and highlighting.

--- a/instruction_lab.css
+++ b/instruction_lab.css
@@ -224,7 +224,7 @@ div.icon img{
 #instructions_slider{
     background: white;
     position: absolute;
-    top: 1em;;
+    top: 1em;
     right: 1em;
     width: 2em;
     height: 17.5em;
